syntax = "proto3";

package blockjoy.api.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// Common message types
message Uuid {
    string value = 1;
}

message CommandMeta {
    Uuid api_command_id = 1;
    google.protobuf.Timestamp created_at = 2;
}

message Parameter {
    string name = 1;
    google.protobuf.Any value = 2;
}

message ContainerImage {
    string url = 1;
}
